<resources>
    <string name="app_name">KaisendonMk2</string>
    <string name="login">Login</string>
    <string name="instance">Instance</string>
    <string name="access_token">Access token</string>
    <string name="imananishiteru">Toot</string>
    <string name="post">Post</string>
    <string name="status_message">Can I really post?</string>
    <string name="post_ok">Successfully posted</string>
    <string name="post_error">Post failed</string>
    <string name="favourite_ok">I registered as a favorite</string>
    <string name="boost_ok">I was able to boost</string>
    <string name="favourite_message">Can I add it to my favorites?</string>
    <string name="boost_message">Can I boost it?</string>
    <string name="favourite">Favourite</string>
    <string name="boost">Boost</string>
    <string name="error">There was a problem</string>
    <string name="timeline_edit">Setting the timeline to read</string>
    <string name="style_edit">Appearance settings</string>
    <string name="viagei">Client Name</string>
    <string name="add_timeline">Add timeline</string>
    <string name="add">Add</string>
    <string name="home_notification">Home + Notification</string>
    <string name="local_tl">Local TL</string>
    <string name="delete_timeline">Can I delete the timeline?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="notification_favourite">favorite</string>
    <string name="notification_mention">Mention</string>
    <string name="notification_reblog">Boost</string>
    <string name="notification_follow">Follow</string>
    <string name="boosted">boosted</string>
    <string name="visibility_public">Public</string>
    <string name="visibility_unlisted">Unlisted</string>
    <string name="visibility_private">Private</string>
    <string name="visibility_direct">Direct</string>
    <string name="visibility">Visibility</string>
    <string name="account">Account</string>
    <string name="account_switching">Account switching</string>
    <string name="timeline_item_size">Number of acquisitions</string>
    <string name="custom_emoji">Custom emoji</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="misskey_login">Login to Misskey</string>
    <string name="renoted">Renote</string>
    <string name="renote_message">Can I renote?</string>
    <string name="reaction">reaction</string>
    <string name="reaction_ok">Reacted</string>
    <string name="misskey_visibility_public">Public</string>
    <string name="misskey_visibility_home">Home</string>
    <string name="misskey_visibility_followers">Followers</string>
    <string name="misskey_visibility_specified">Specified</string>
    <string name="misskey_visibility_private">Private</string>
    <string name="timeline_setting_streaming">Disable streaming API</string>
    <string name="timeline_setting_image_hide">Hide image</string>
    <string name="timeline_setting">Timeline settings</string>
    <string name="timeline_setting_image_hide_mobile">Hide images on mobile data lines</string>
    <string name="timeline_setting_image_stop_gif">Stop GIF animation (GIF images use a lot of power)</string>
    <string name="timeline_setting_background_image_set">Timeline background settings</string>
    <string name="timeline_setting_background_image_reset">Reset timeline background settings</string>
    <string name="load_timeline_title">Timeline title</string>
    <string name="load_timeline_background">Timeline color</string>
    <string name="load_timeline_text_color">Timeline text color</string>
    <string name="save">Save</string>
    <string name="timeline_setting_font_set">Set font</string>
    <string name="timeline_setting_font_reset">Delete font settings</string>
    <string name="account_list">Account list</string>
    <string name="menu">Menu</string>
    <string name="preference">Configuration</string>
    <string name="setting_load_limit_mastodon_title">Number of items to be acquired with Mastodon</string>
    <string name="setting_load_limit_mastodon_description">Up to 40 items can be acquired simultaneously.</string>
    <string name="setting_load_limit_misskey_title">Number of records to be acquired at one time with Misskey</string>
    <string name="setting_load_limit_misskey_description">Up to 100 cases can be acquired.</string>
    <string name="license">License</string>
    <string name="kono_app">About this app</string>
    <string name="source_code">SourceCode</string>
    <string name="device_mmc_nnc">Mobile carrier MMC + MNC</string>
    <string name="device_carrier_name">Carrier name</string>
    <string name="device_carrier_country">Country code</string>
    <string name="device_signal_level">Signal strength</string>
    <string name="device_battery_level">Battery level</string>
    <string name="device_android_version">Android version</string>
    <string name="device_device_name">Device name</string>
    <string name="device_maker_name">Manufacture name</string>
    <string name="device_sdk_version">SDK version</string>
    <string name="device_info">Device information</string>
    <string name="setting_column_title">Number that can be displayed next to the timeline</string>
    <string name="setting_column_description">Default is 2</string>
    <string name="account_delete_message">Can I delete my account?</string>
    <string name="account_lisy">Account list. You can delete it here.</string>
    <string name="setting_not_sleep">Disable sleep</string>
    <string name="misskey_reaction_message">Can I react?</string>
    <string name="misskey_visibility_local_only">Only publish locally (not remotely)</string>
    <string name="follow">Follow</string>
    <string name="follower">Follower</string>
    <string name="status_count">Statuses</string>
    <string name="last_updated">last updated</string>
    <string name="cw">CW</string>
    <string name="fav_bt_message">Can I boost my favorites and boost them?</string>
    <string name="fav_bt_button">fav+bt</string>
    <string name="fav_bt_ok">I made Fav+BT.</string>
    <string name="floating_tl">Floating TL</string>
    <string name="setting_attach_media_not_trim_title">Do not trim attached image</string>
    <string name="setting_attach_media_not_trim_description">Actually, it\'s best to expand it to make it easier to see on the timeline, but there is a possibility that the part of the copyright notation will be cut off.</string>
</resources>
