<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="40"
        android:key="setting_load_limit_mastodon"
        android:summary="@string/setting_load_limit_mastodon_description"
        android:title="@string/setting_load_limit_mastodon_title" />

    <EditTextPreference
        android:defaultValue="100"
        android:key="setting_load_limit_misskey"
        android:summary="@string/setting_load_limit_misskey_description"
        android:title="@string/setting_load_limit_misskey_title" />

    <EditTextPreference
        android:defaultValue="2"
        android:key="setting_tl_column"
        android:summary="@string/setting_column_description"
        android:title="@string/setting_column_title" />

    <Preference android:title="@string/license">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="io.github.takusan23.kaisendonmk2.Activity.LicenseActivity"
            android:targetPackage="io.github.takusan23.kaisendonmk2" />
    </Preference>

    <Preference android:title="@string/kono_app">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="io.github.takusan23.kaisendonmk2.Activity.KonoAppActivity"
            android:targetPackage="io.github.takusan23.kaisendonmk2" />
    </Preference>

</PreferenceScreen>