<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bottom_fragment_menu_load_floating_tl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawableStart="@drawable/ic_library_books_black_24dp"
                android:focusable="true"
                android:visibility="gone"
                android:padding="20dp"
                android:text="@string/floating_tl" />

            <TextView
                android:id="@+id/bottom_fragment_menu_load_timeline_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawableStart="@drawable/ic_dashboard_black_24dp"
                android:focusable="true"
                android:padding="20dp"
                android:text="@string/timeline_edit" />

            <TextView
                android:id="@+id/bottom_fragment_menu_timeline_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawableStart="@drawable/ic_format_paint_black_24dp"
                android:focusable="true"
                android:padding="20dp"
                android:text="@string/timeline_setting" />

            <TextView
                android:id="@+id/bottom_fragment_menu_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawableStart="@drawable/ic_account_box_black_24dp"
                android:focusable="true"
                android:padding="20dp"
                android:text="@string/account_list" />

            <TextView
                android:id="@+id/bottom_fragment_menu_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:focusable="true"
                android:padding="20dp"
                android:text="@string/login" />

            <TextView
                android:id="@+id/bottom_fragment_menu_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawableStart="@drawable/ic_settings_black_24dp"
                android:focusable="true"
                android:padding="20dp"
                android:text="@string/preference" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>