<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/bottom_fragment_quick_profile_avatar_imageview"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_insert_emoticon_black_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bottom_fragment_quick_profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="2dp"
                android:text="displayName "
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bottom_fragment_quick_profile_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="TextView" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/bottom_fragment_quick_profile_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="Note / Profile" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bottom_fragment_quick_profile_follow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/follow" />

        <TextView
            android:id="@+id/bottom_fragment_quick_profile_follower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/follower" />

        <TextView
            android:id="@+id/bottom_fragment_quick_profile_status_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/status_count" />

    </LinearLayout>

    <TextView
        android:id="@+id/bottom_fragment_quick_profile_last_updated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/last_updated" />
</LinearLayout>